Fixed alignment issues for mobile view

--- a/client/src/AppCompact.css
+++ b/client/src/AppCompact.css
@@ -80,6 +80,8 @@
     font-size: 100%;
     font-weight: 200;
     line-height: 24pt;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .breakDisabled {
@@ -168,7 +170,7 @@
 
 .viewButtons_C {
     position: relative;
-    margin-top: 60px;
+    margin-top: 100px;
     height: 50px;
 }
 
